--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 </div>
             </div>
         </section>
-        <!-- 
+<!--         
         <section>
             <div class="container mx-auto px-[20px] pt-[120px]">
                 <h1 class="text-[36px] font-bold">Специальные предложения</h1>
@@ -475,9 +475,9 @@
             </div>
         </section> -->
 
-        <!-- <section>
+        <section>
             <div class="contaienr mx-auto px-[20px]"></div>
-        </section> -->
+        </section> 
     </main>
 
     <script src="./js/main.js"></script>
