--- a/index.html
+++ b/index.html
@@ -358,9 +358,9 @@
         </section>
 
         <section>
-            <div class="container mx-auto px-[20px] pt-[120px]">
+            <div class="container mx-auto px-[20px] pt-[40px] sm:pt-[120px]">
                 <div class="flex items-center justify-between">
-                    <h1 class="font-bold text-[24px] sm:text-[36px]">Покупали раньше</h1>
+                    <h1 class="font-bold text-[22px]  sm:text-[36px]">Покупали раньше</h1>
                     <div class="flex items-center gap-[7px]">
                         <p class="text-[#8F8F8F] text-[12px] sm:text-[16px]">Все продукты</p>
                         <img src="./assets/home/chevron-right.png" alt="arrow">
@@ -397,7 +397,8 @@
                             </div>
                         </div>
                         <div class="flex flex-col gap-[5px] sm:gap-[11px] pt-[3px] sm:pt-[8px] ">
-                            <p class="text-[14px] sm:text-[16px] line-clamp-2">Комбайн КЗС-1218 <br> «ДЕСНА-ПОЛЕСЬЕ GS12»</p>
+                            <p class="text-[14px] sm:text-[16px] line-clamp-2">Комбайн КЗС-1218 <br> «ДЕСНА-ПОЛЕСЬЕ
+                                GS12»</p>
                             <img src="./assets/home/rating (2).png" alt="rating">
                             <button
                                 class="w-full  rounded-[4px] text-[#70C05B] hover:text-[white] duration-[0.5s] hover:bg-[#FF6633] hover:border-none cursor-pointer h-[35px] sm:h-[40px] border-[1px] border-[#70C05B]">
@@ -427,7 +428,8 @@
                                 src="./assets/header/layk.png" alt="layk">
                         </div>
                     </div>
-                    <div class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
+                    <div
+                        class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
                         <img class="w-full" src="./assets/home/discount-2.png" alt="img">
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
@@ -449,35 +451,39 @@
                 </div>
             </div>
         </section>
-<!--         
+
         <section>
-            <div class="container mx-auto px-[20px] pt-[120px]">
-                <h1 class="text-[36px] font-bold">Специальные предложения</h1>
-                <div class="pt-[40px] flex items-start justify-between">
+            <div class="container mx-auto px-[20px] pt-[60px] sm:pt-[120px]">
+                <h1 class="text-[24px] sm:text-[36px] font-bold">Специальные предложения</h1>
+                <div class="pt-[20px] sm:pt-[40px]  flex flex-col items-center justify-center 2xl:grid grid-cols-2 gap-[20px] sm:gap-[80px]">
                     <div
-                        class="bg-[#FCD5BA] max-w-[614px] group w-full h-[200x] flex items-center rounded-[6px] shadow-md justify-between cursor-pointer px-[31.75px]">
+                        class="bg-[#FCD5BA] max-w-full overflow-hidden 2xl:max-w-[614px] group w-full h-[200x] flex items-center rounded-[6px] shadow-md justify-between cursor-pointer px-[20px] py-[7px] sm:py-[0px] sm:px-[31.75px]">
                         <div>
-                            <h3 class="text-[24px] font-bold">Оформите карту <br> «Северяночка»</h3>
-                            <p class="whitespace-nowrap pt-[6px]">И получайте бонусы при покупке <br> в магазинах и на
+                            <h3 class="text-[18px] sm:text-[24px] font-bold ">Оформите карту <br> «Северяночка»</h3>
+                            <p class="text-[12px] sm:text-[16px] whitespace-nowrap pt-[6px] whitespace-wrap">И получайте бонусы при покупке <br> в
+                                магазинах и на
                                 сайте</p>
                         </div>
-                        <img class="scale-[1] group-hover:scale-[1.1] duration-[0.3s]" src="./assets/home/about-1.png" alt="img">
+                        <img class="w-[130px] scale-[1] group-hover:scale-[1.1] duration-[0.3s]"
+                            src="./assets/home/about-1.png" alt="img">
                     </div>
                     <div
-                        class="bg-[#E5FFDE] max-w-[614px] w-full h-[200x] group flex items-center rounded-[6px] shadow-md py-[8px] cursor-pointer justify-between px-[31.75px]">
+                        class="bg-[#E5FFDE] max-w-full 2xl:max-w-[614px] overflow-hidden w-full h-[200x] group flex items-center rounded-[6px] shadow-md py-[8px] cursor-pointer justify-between px-[20px] py-[7px] sm:py-[0px] sm:px-[31.75px]">
                         <div>
-                            <h3 class="text-[24px] font-bold">Покупайте <br> акционные товары</h3>
-                            <p class="whitespace-nowrap pt-[6px]">И получайте вдвое больше <br> бонусов</p>
+                            <h3 class="text-[18px] sm:text-[24px] font-bold whitespace-wrap">Покупайте <br> акционные товары</h3>
+                            <p class="text-[12px] sm:text-[16px] whitespace-nowrap pt-[6px] whitespace-wrap">И получайте вдвое больше <br> бонусов
+                            </p>
                         </div>
-                        <img class="scale-[1] group-hover:scale-[1.1] duration-[0.3s]" src="./assets/home/about-2.png" alt="img">
+                        <img class="w-[130px] scale-[1] group-hover:scale-[1.1] duration-[0.3s]"
+                            src="./assets/home/about-2.png" alt="img">
                     </div>
                 </div>
             </div>
-        </section> -->
-
+        </section>
+        <!-- 
         <section>
             <div class="contaienr mx-auto px-[20px]"></div>
-        </section> 
+        </section>  -->
     </main>
 
     <script src="./js/main.js"></script>
