--- a/index.html
+++ b/index.html
@@ -455,35 +455,46 @@
         <section>
             <div class="container mx-auto px-[20px] pt-[60px] sm:pt-[120px]">
                 <h1 class="text-[24px] sm:text-[36px] font-bold">Специальные предложения</h1>
-                <div class="pt-[20px] sm:pt-[40px]  flex flex-col items-center justify-center 2xl:grid grid-cols-2 gap-[20px] sm:gap-[80px]">
+                <div
+                    class="pt-[20px] sm:pt-[40px]  flex flex-col items-center justify-center 2xl:grid grid-cols-2 gap-[20px] sm:gap-[80px]">
                     <div
-                        class="bg-[#FCD5BA] max-w-full overflow-hidden 2xl:max-w-[614px] group w-full h-[200x] flex items-center rounded-[6px] shadow-md justify-between cursor-pointer px-[20px] py-[7px] sm:py-[0px] sm:px-[31.75px]">
+                        class="bg-[#FCD5BA] max-w-full overflow-hidden xl:max-w-[614px] group w-full h-[200x] flex items-center rounded-[6px] shadow-md  cursor-pointer px-[20px] py-[7px] sm:py-[0px] sm:px-[31.75px]">
                         <div>
                             <h3 class="text-[18px] sm:text-[24px] font-bold ">Оформите карту <br> «Северяночка»</h3>
-                            <p class="text-[12px] sm:text-[16px] whitespace-nowrap pt-[6px] whitespace-wrap">И получайте бонусы при покупке <br> в
+                            <p class="text-[12px] sm:text-[16px] whitespace-nowrap pt-[6px] whitespace-wrap">И получайте
+                                бонусы при покупке <br> в
                                 магазинах и на
                                 сайте</p>
                         </div>
-                        <img class="w-[130px] scale-[1] group-hover:scale-[1.1] duration-[0.3s]"
+                        <img class="w-[130px]  scale-[1] group-hover:scale-[1.1] duration-[0.3s]"
                             src="./assets/home/about-1.png" alt="img">
                     </div>
                     <div
                         class="bg-[#E5FFDE] max-w-full 2xl:max-w-[614px] overflow-hidden w-full h-[200x] group flex items-center rounded-[6px] shadow-md py-[8px] cursor-pointer justify-between px-[20px] py-[7px] sm:py-[0px] sm:px-[31.75px]">
                         <div>
-                            <h3 class="text-[18px] sm:text-[24px] font-bold whitespace-wrap">Покупайте <br> акционные товары</h3>
-                            <p class="text-[12px] sm:text-[16px] whitespace-nowrap pt-[6px] whitespace-wrap">И получайте вдвое больше <br> бонусов
+                            <h3 class="text-[18px] sm:text-[24px] font-bold whitespace-wrap">Покупайте <br> акционные
+                                товары</h3>
+                            <p class="text-[12px] sm:text-[16px] whitespace-nowrap pt-[6px] whitespace-wrap">И получайте
+                                вдвое больше <br> бонусов
                             </p>
                         </div>
-                        <img class="w-[130px] scale-[1] group-hover:scale-[1.1] duration-[0.3s]"
+                        <img class="w-[130px]  scale-[1] group-hover:scale-[1.1] duration-[0.3s]"
                             src="./assets/home/about-2.png" alt="img">
                     </div>
                 </div>
             </div>
         </section>
-        <!-- 
+
         <section>
-            <div class="contaienr mx-auto px-[20px]"></div>
-        </section>  -->
+            <div class="container mx-auto px-[20px] pb-[150px]">
+                <h1 class="text-[36px] font-bold">Наши магазины</h1>
+                <div>
+                    <a class="bg-[#F3F2F1] p-[8px] rounded-[4px] text-[12px]" href="">
+                        п.Щельяюр
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="./js/main.js"></script>
