--- a/index.html
+++ b/index.html
@@ -454,11 +454,11 @@
 
         <section>
             <div class="container mx-auto px-[20px] pt-[60px] sm:pt-[120px]">
-                <h1 class="text-[24px] sm:text-[36px] font-bold">Специальные предложения</h1>
+                <h1 class="text-[24px] sm:text-[36px] font-bold">Специальные предложения </h1>
                 <div
-                    class="pt-[20px] sm:pt-[40px]  flex flex-col items-center justify-center 2xl:grid grid-cols-2 gap-[20px] sm:gap-[80px]">
+                    class="pt-[20px] sm:pt-[40px] flex flex-col gap-[20px] lg:grid grid-cols-2 gap-[20px] 2xl:gap-[180px]">
                     <div
-                        class="bg-[#FCD5BA] max-w-full overflow-hidden xl:max-w-[614px] group w-full h-[200x]  flex items-center rounded-[6px] shadow-md cursor-pointer px-[20px] py-[7px] sm:py-[0px] sm:px-[31.75px]">
+                        class="bg-[#FCD5BA] max-w-[704px] w-full  overflow-hidden  group h-[200x] flex items-center justify-between rounded-[6px] shadow-md cursor-pointer px-[20px] py-[7px] sm:py-[0px] sm:px-[31.75px]">
                         <div>
                             <h3 class="text-[18px] sm:text-[24px] font-bold ">Оформите карту <br> «Северяночка»</h3>
                             <p class="text-[12px] sm:text-[16px] whitespace-nowrap pt-[6px] whitespace-wrap">И получайте
@@ -466,11 +466,11 @@
                                 магазинах и на
                                 сайте</p>
                         </div>
-                        <img class="w-[130px]  scale-[1] group-hover:scale-[1.1] duration-[0.3s]"
+                        <img class="w-[145px]  scale-[1] group-hover:scale-[1.1] duration-[0.3s]"
                             src="./assets/home/about-1.png" alt="img">
                     </div>
                     <div
-                        class="bg-[#E5FFDE] max-w-full 2xl:max-w-[614px] overflow-hidden w-full h-[200x] group flex items-center rounded-[6px] shadow-md py-[8px] cursor-pointer justify-between px-[20px] py-[7px] sm:py-[0px] sm:px-[31.75px]">
+                        class="bg-[#E5FFDE] max-w-[704px] overflow-hidden w-full h-[200x] group flex items-center rounded-[6px] shadow-md py-[8px] cursor-pointer justify-between px-[20px] py-[7px] sm:py-[0px] sm:px-[31.75px]">
                         <div>
                             <h3 class="text-[18px] sm:text-[24px] font-bold whitespace-wrap">Покупайте <br> акционные
                                 товары</h3>
@@ -486,16 +486,192 @@
         </section>
 
         <section>
-            <div class="container mx-auto px-[20px] pb-[150px]">
-                <h1 class="text-[36px] font-bold">Наши магазины</h1>
-                <div>
-                    <a class="bg-[#F3F2F1] p-[8px] rounded-[4px] text-[12px]" href="">
+            <div class="container mx-auto px-[20px] pt-[40px] sm:pt-[120px]">
+                <h1 class="text-[24px] sm:text-[36px] font-bold">Наши магазины</h1>
+                <div class="flex items-center gap-[18px] sm:gap-[24px] pt-[30px] sm:pt-[40px]">
+                    <a class="bg-[#F3F2F1] group hover:bg-[#70C05B] hover:text-[white] duration-[0.3s] p-[8px] rounded-[4px] text-[12px]"
+                        href="">
                         п.Щельяюр
                     </a>
+                    <a class="bg-[#F3F2F1] group hover:bg-[#70C05B] hover:text-[white] duration-[0.3s] p-[8px] rounded-[4px] text-[12px]"
+                        href="">
+                        д.Вертеп
+                    </a>
+                    <a class="bg-[#F3F2F1] group hover:bg-[#70C05B] hover:text-[white] duration-[0.3s] p-[8px] rounded-[4px] text-[12px]"
+                        href="">
+                        с.Краснобор
+                    </a>
+                    <a class="bg-[#F3F2F1] group hover:bg-[#70C05B] hover:text-[white] duration-[0.3s] p-[8px] rounded-[4px] text-[12px]"
+                        href="">
+                        д.Диюр
+                    </a>
+                </div>
+                <div class="pt-[14px] sm:pt-[24px]">
+                    <img class="max-w-full" src="./assets/home/location.png" alt="location">
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container mx-auto px-[20px] pt-[40px] pb-[150px] sm:pt-[120px]">
+                <div class="flex items-center justify-between">
+                    <h1 class="text-[24px] sm:text-[36px] font-bold">Статьи</h1>
+                    <div class="flex items-center gap-[7px]">
+                        <p class="text-[12px] sm:text-[16px] text-[#606060]">Все статьи</p>
+                        <img src="./assets/home/chevron-right.png" alt="chevron-right">
+                    </div>
+                </div>
+                <div
+                    class="pt-[20px] sm:pt-[40px] grid grid-cols-1   sm:grid-cols-2 lg:flex items-center justify-between gap-[20px]">
+                    <div
+                        class="max-w-[470px] w-full bg-[white] cursor-pointer shadow-2xl rounded-[8px] overflow-hidden">
+                        <img class="w-full" src="./assets/home/static-1.png" alt="img">
+                        <div class="px-[10px] pb-[20px] pt-[10px]">
+                            <p class="text-[#8F8F8F] text-[12px]">05.03.2021</p>
+                            <p class="font-bold text-[16px] sm:text-[18px]">Режим использования масок и <br> перчаток на
+                                территории
+                                магазинов</p>
+                            <p class="pt-[10px] text-[14px] sm:text-[16px] text-[#333333] pb-[17px]">Подробная
+                                информация о режимах <br>
+                                использования масок
+                                и перчаток на <br> территории магазинов
+                                "ЛЕНТА". Информация <br> обновляется каждый будний день.</p>
+                            <a class="bg-[#E5FFDE] rounded-[4px]  hover:text-[white] duration-[0.3s] text-[#70C05B] px-[35px] group hover:bg-[#70C05B] p-[10px]"
+                                href="">
+                                Подробнее
+                            </a>
+                        </div>
+                    </div>
+                    <div
+                        class="max-w-[470px] w-full bg-[white] cursor-pointer shadow-2xl rounded-[8px] overflow-hidden">
+                        <img class="w-full" src="./assets/home/static-2.png" alt="img">
+                        <div class="px-[10px] pb-[20px] pt-[10px]">
+                            <p class="text-[#8F8F8F] text-[12px]">05.03.2021</p>
+                            <p class="font-bold text-[16px] sm:text-[18px]">Режим использования масок и <br> перчаток на
+                                территории
+                                магазинов</p>
+                            <p class="pt-[10px] text-[14px] sm:text-[16px] text-[#333333] pb-[17px]">Подробная
+                                информация о режимах <br>
+                                использования масок
+                                и перчаток на <br> территории магазинов
+                                "ЛЕНТА". Информация <br> обновляется каждый будний день.</p>
+                            <a class="bg-[#E5FFDE] rounded-[4px]  hover:text-[white] duration-[0.3s] text-[#70C05B] px-[35px] group hover:bg-[#70C05B] p-[10px]"
+                                href="">
+                                Подробнее
+                            </a>
+                        </div>
+                    </div>
+                    <div
+                        class="max-w-[470px] w-full bg-[white] cursor-pointer shadow-2xl rounded-[8px] overflow-hidden">
+                        <img class="w-full" src="./assets/home/static-3.png" alt="img">
+                        <div class="px-[10px] pb-[20px] pt-[10px]">
+                            <p class="text-[#8F8F8F] text-[12px]">05.03.2021</p>
+                            <p class="font-bold text-[16px] sm:text-[18px]">ЗОЖ или ФАСТФУД. А вы на чьей <br> стороне?
+                                Голосуем!</p>
+                            <p class="pt-[10px] text-[14px] sm:text-[16px] text-[#333333] pb-[17px]">Подробная
+                                информация о режимах <br>
+                                использования масок
+                                и перчаток на <br> территории магазинов
+                                "ЛЕНТА". Информация <br> обновляется каждый будний день.</p>
+                            <a class="bg-[#E5FFDE] rounded-[4px]  hover:text-[white] duration-[0.3s] text-[#70C05B] px-[35px] group hover:bg-[#70C05B] p-[10px]"
+                                href="">
+                                Подробнее
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer class="bg-[url('/assets/footer/bg.png')] py-[25px]  bg-[#F9F4E2] pb-[100px] sm:pb-[15px]">
+        <div class="container  mx-auto px-[20px]">
+            <div class=" grid grid-cols-1 gap-[30px] lg:flex items-center justify-between">
+                <div class="grid grid-cols-2 gap-[40px]">
+                    <div class="flex items-center gap-[20px] lg:gap-[40px]">
+                        <img src="./assets/header/head-logo.png" alt="logo">
+                        <p class="whitespace-nowrap">О компании</p>
+                        <p class="whitespace-nowrap">Контакты </p>
+                        <p class="whitespace-nowrap">Вакансии</p>
+                    </div>
+                    <div class="flex items-center gap-[20px] lg:gap-[40px]">
+                        <p class="hidden sm:flex">Статьи</p>
+                        <p class="hidden 2xl:flex">Политика обработки персональных данных</p>
+                    </div>
+                </div>
+                <div class="flex items-center gap-[40px]">
+                    <div class="flex items-center gap-[16px]">
+                        <img src="./assets/footer/instagram.png" alt="instagram">
+                        <img src="./assets/footer/facebook.png" alt="facebook">
+                        <img src="./assets/footer/vkontakte.png" alt="vkontakte">
+                        <img src="./assets/footer/ok.png" alt="ok">
+                    </div>
+                    <div class="    flex items-center gap-[5px]">
+                        <img src="./assets/footer/phone.png" alt="phone">
+                        <p class="whitespace-nowrap">8 800 777 33 33</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <div
+        class="flex sm:hidden bg-[white] flex fixed h-[10vw] w-[100vw] bottom-[0px] justify-between items-center flex py-[30px] px-[15px] z-[900]">
+        <div class="flex flex-col items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#414141">
+                <path
+                    d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z" />
+                <p class="text-[12px]">Главная</p>
+            </svg>
+        </div>
+        <div class="flex flex-col items-center">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M12.7046 4.25632C13.8299 3.13054 15.3564 2.49805 16.9482 2.49805C18.5399 2.49805 20.0664 3.13051 21.1916 4.25624C22.3174 5.38152 22.95 6.90816 22.95 8.49987C22.95 10.0916 22.3175 11.6181 21.1917 12.7434C21.1917 12.7435 21.1917 12.7434 21.1917 12.7434L12.3517 21.5834C12.1565 21.7787 11.8399 21.7787 11.6446 21.5834L2.80461 12.7434C0.460963 10.3998 0.460963 6.59997 2.80461 4.25632C5.14826 1.91267 8.94807 1.91267 11.2917 4.25632L11.9982 4.96277L12.7046 4.25632C12.7046 4.25629 12.7046 4.25635 12.7046 4.25632ZM16.9482 3.49805C15.6217 3.49805 14.3496 4.02515 13.4118 4.96334L12.3517 6.02343C12.258 6.11719 12.1308 6.16987 11.9982 6.16987C11.8656 6.16987 11.7384 6.11719 11.6446 6.02343L10.5846 4.96343C8.63149 3.0103 5.46484 3.0103 3.51172 4.96343C1.55859 6.91655 1.55859 10.0832 3.51172 12.0363L11.9982 20.5228L20.4846 12.0363C21.4228 11.0986 21.95 9.82636 21.95 8.49987C21.95 7.17338 21.4229 5.90126 20.4847 4.96351C19.5469 4.02532 18.2747 3.49805 16.9482 3.49805Z"
+                    fill="#414141" />
+            </svg>
+            <p class="text-[12px]">Избранное</p>
+        </div>
+        <div class="flex flex-col items-center">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M11.3325 1.89792C11.3324 1.89801 11.3327 1.89782 11.3325 1.89792L3.33366 5.89736L3.33255 5.89792C2.82288 6.15117 2.50045 6.67105 2.50005 7.24015V16.7636C2.49608 17.3335 2.81541 17.8564 3.32416 18.1132C3.32387 18.113 3.32445 18.1133 3.32416 18.1132L11.3237 22.1129C11.7462 22.3244 12.2438 22.3244 12.6663 22.113L20.6664 18.1129L20.6675 18.1124C21.1773 17.8591 21.4997 17.3391 21.5 16.7699V7.24042C21.4997 6.67121 21.1773 6.15121 20.6675 5.89792L20.6664 5.89736L12.6675 1.89792C12.6674 1.89782 12.6677 1.89801 12.6675 1.89792C12.2474 1.68935 11.7527 1.68934 11.3325 1.89792ZM10.8875 1.00238C11.5883 0.654153 12.4118 0.654153 13.1125 1.00238L13.1137 1.00293L21.1125 5.00238C21.1124 5.0023 21.1127 5.00247 21.1125 5.00238C21.9618 5.42464 22.4995 6.29138 22.5 7.23988V16.7701C22.4995 17.7186 21.9624 18.5853 21.1132 19.0076C21.113 19.0077 21.1134 19.0075 21.1132 19.0076L13.1138 23.0073C13.1138 23.0073 13.1138 23.0073 13.1138 23.0073C12.4097 23.3596 11.5806 23.3597 10.8764 23.0074C10.8764 23.0073 10.8765 23.0074 10.8764 23.0074L2.87644 19.0074L2.87506 19.0067C2.02685 18.5793 1.49413 17.7082 1.50005 16.7585V7.24015C1.50055 6.29169 2.03772 5.42496 2.88695 5.00268C2.88675 5.00278 2.88715 5.00258 2.88695 5.00268L10.8864 1.00294L10.8875 1.00238Z"
+                    fill="#414141" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M1.87321 5.93666C1.9967 5.68967 2.29704 5.58956 2.54403 5.71305L12.0004 10.4412L21.4568 5.71305C21.7038 5.58956 22.0041 5.68967 22.1276 5.93666C22.2511 6.18365 22.151 6.48398 21.904 6.60748L12.224 11.4475C12.0833 11.5179 11.9176 11.5179 11.7768 11.4475L2.09682 6.60748C1.84983 6.48398 1.74971 6.18365 1.87321 5.93666Z"
+                    fill="#414141" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M12 10.5C12.2761 10.5 12.5 10.7239 12.5 11V22.76C12.5 23.0361 12.2761 23.26 12 23.26C11.7239 23.26 11.5 23.0361 11.5 22.76V11C11.5 10.7239 11.7239 10.5 12 10.5Z"
+                    fill="#414141" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M6.5529 3.2765C6.67639 3.02951 6.97673 2.9294 7.22372 3.0529L17.2237 8.0529C17.4707 8.17639 17.5708 8.47673 17.4473 8.72372C17.3238 8.97071 17.0235 9.07082 16.7765 8.94732L6.7765 3.94732C6.52951 3.82383 6.4294 3.52349 6.5529 3.2765Z"
+                    fill="#414141" />
+            </svg>
+
+            <p class="text-[12px]">Заказы</p>
+        </div>
+        <div class="flex items-center flex-col">
+            <svg width="24" height="28" viewBox="0 0 24 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M5.5 25C5.5 23.6193 6.61929 22.5 8 22.5C9.38071 22.5 10.5 23.6193 10.5 25C10.5 26.3807 9.38071 27.5 8 27.5C6.61929 27.5 5.5 26.3807 5.5 25ZM8 23.5C7.17157 23.5 6.5 24.1716 6.5 25C6.5 25.8284 7.17157 26.5 8 26.5C8.82843 26.5 9.5 25.8284 9.5 25C9.5 24.1716 8.82843 23.5 8 23.5Z"
+                    fill="#414141" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M17.5 25C17.5 23.6193 18.6193 22.5 20 22.5C21.3807 22.5 22.5 23.6193 22.5 25C22.5 26.3807 21.3807 27.5 20 27.5C18.6193 27.5 17.5 26.3807 17.5 25ZM20 23.5C19.1716 23.5 18.5 24.1716 18.5 25C18.5 25.8284 19.1716 26.5 20 26.5C20.8284 26.5 21.5 25.8284 21.5 25C21.5 24.1716 20.8284 23.5 20 23.5Z"
+                    fill="#414141" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M1 4.5C0.723858 4.5 0.5 4.72386 0.5 5C0.5 5.27614 0.723858 5.5 1 5.5H4.58051C5.33783 9.79147 6.10333 14.0643 6.74931 18.3709C6.93288 19.5947 7.98416 20.5 9.22165 20.5H19.3597C20.5514 20.5 21.5774 19.6588 21.8111 18.4903L23.2503 11.2942C23.436 10.366 22.726 9.5 21.7795 9.5H7.16046C6.8575 9.5 6.57797 9.58901 6.34436 9.74093L5.49239 4.91311C5.45023 4.67418 5.24262 4.5 5 4.5H1ZM6.666 11.0742C6.62065 10.7719 6.85478 10.5 7.16046 10.5H21.7795C22.095 10.5 22.3316 10.7887 22.2698 11.0981L20.8305 18.2942C20.6903 18.9953 20.0747 19.5 19.3597 19.5H9.22165C8.47916 19.5 7.84839 18.9568 7.73825 18.2225L6.666 11.0742Z"
+                    fill="#414141" />
+                <rect x="11.8604" width="11.28" height="11" rx="4" fill="#FF6633" />
+                <path
+                    d="M18.3804 9C18.3137 9 18.257 8.98 18.2104 8.94C18.1704 8.89333 18.1504 8.83667 18.1504 8.77V3.17L16.4904 4.45C16.4437 4.49 16.3937 4.51 16.3404 4.51C16.2804 4.51 16.2237 4.47667 16.1704 4.41L15.9104 4.08C15.877 4.03333 15.8604 3.98667 15.8604 3.94C15.8604 3.86 15.8937 3.79667 15.9604 3.75L18.1404 2.07C18.2137 2.02333 18.3004 2 18.4004 2H18.9104C18.977 2 19.0304 2.02333 19.0704 2.07C19.117 2.11 19.1404 2.16333 19.1404 2.23V8.77C19.1404 8.83667 19.117 8.89333 19.0704 8.94C19.0304 8.98 18.977 9 18.9104 9H18.3804Z"
+                    fill="white" />
+            </svg>
+            <p class="text-[12px]">Корзина</p>
+        </div>
+        <div>
+           <img src="./assets/header/avatar (7).png" alt="avatar">
+        </div>
+    </div>
 
     <script src="./js/main.js"></script>
 </body>
